@@ -1,6 +1,8 @@
 2011-05-14  Onkar Shinde  <onkarshinde@gmail.com>
 
 	* po/kn.po, po/el.po, AUTHORS: Updated translations from launchpad.
+	* src/callbacks.[c,h], src/interface.c: Remove '8085 Manual' menu as it
+	provides same functionality as Help -> Contents menu.
 
 2011-05-12  Onkar Shinde  <onkarshinde@gmail.com>
 
